# Timbre

./: .env.example  .gitignore  README.en.md  README.md  SKILL.md  cli.js  cli.py  deliverable.html  observe.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js
eval/: __init__.py  quality_check.js  quality_check.py
examples/: claude_api_demo.py
memory/: store.js  store.py
pipelines/: __init__.py  founder_research.js  founder_research.py
prompts/: entity_resolution.yaml  system.yaml
providers/: __init__.py  anthropic.js  anthropic_provider.py  base.py  index.js  openai.js  openai_provider.py
public/: api.js  index.html
schemas/: founder_profile.js
scripts/: backfill_vault.py
tests/: pipeline.test.js  tools.test.js
timbre/: __init__.py  cli.py  observe.py  session.py  skill_api.py  vault.py
timbre/eval/: __init__.py  quality_check.py
timbre/memory/: __init__.py  store.py
timbre/pipelines/: founder_research.py  investor_research.py  sourcing.py
timbre/prompts/: entity_resolution.yaml  eval_judge.yaml  founder_profile.yaml  research_plan.yaml  system.yaml
timbre/providers/: __init__.py  anthropic_provider.py  openai_provider.py
timbre/tools/: browse_url.py  read_file.py  registry.py  web_search.py
tools/: __init__.py  browse_url.js  browse_url.py  read_file.js  read_file.py  registry.py  web_search.js
